update MenuController